Переделал под React

--- a/src/index.html
+++ b/src/index.html
@@ -3,25 +3,12 @@
 <head>
     <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <link rel="stylesheet" href="style.css">
 
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Hind:wght@300;400;500;600;700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    {{> views/header }}
-<main>
-    <div class="hungry">
-        <h2 class = "hungry-title"> <b class="hungry-b">Hungry?</b> Find your next meal</h2>
-        <a href="index.html"></a>
-        <img class="Ladies" src="img/Ladies.svg" alt="">
-    </div>
-    {{> views/carusel-favourite-pick }}
-    {{> views/banner }}
-    {{> views/carusel-new-arrivals }}
-    {{> views/carusel-categories }}
-    {{> views/footer logo="logo-in-footer.svg"}}
-</main>
+    <div id="root"></div>
 </body>
 </html>
